small fix to improve the visibilite of multiselect checkboxes

--- a/css/ui.jqgrid.css
+++ b/css/ui.jqgrid.css
@@ -312,7 +312,7 @@
 	border-bottom-color: inherit;
 }
 .ui-jqgrid .jqgrow > td.td_cbox {
-	padding: 2px;
+	padding: 0;
 	text-align: center;
 	vertical-align: middle;
 }
